--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ learning_logs/__pycache__
 learning_logs/migrations/__pycache__/
 ll_project/__pycache__/
 .env
+accounts/__pycache__/
+accounts/migrations/__pycache__/
