--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.0.3"
 django-bootstrap5 = "^23.4"
+platformshconfig = "^2.4.0"
 
 
 [build-system]
